[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Nova pasta/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Nova pasta/AbilityButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Nova pasta/AbilityButton2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Nova pasta/DinheiroCounter.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Nova pasta/Pause.gd" type="Script" id=7]
[ext_resource path="res://Assets/Player/Itens_popups.gd" type="Script" id=8]
[ext_resource path="res://icon.png" type="Texture" id=11]

[node name="Camera2D" type="Camera2D"]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="HealthBar" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 33.0
margin_right = 40.0
margin_bottom = 73.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityButton" parent="CanvasLayer/Control/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 40.0

[node name="AbilityButton2" parent="CanvasLayer/Control/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 40.0

[node name="DinheiroCounter" parent="CanvasLayer/Control/HBoxContainer" instance=ExtResource( 5 )]
margin_bottom = 40.0

[node name="Pause" type="Control" parent="CanvasLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Itens_UI" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite_popup" type="Sprite" parent="CanvasLayer/Itens_UI"]
visible = false
position = Vector2( 188.3, 440.891 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="Label_popup" type="Label" parent="CanvasLayer/Itens_UI"]
visible = false
margin_left = 245.962
margin_top = 437.392
margin_right = 346.962
margin_bottom = 451.392
text = "Item description"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_popup" type="Timer" parent="CanvasLayer/Itens_UI"]
wait_time = 5.0
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Itens_UI"]
margin_left = 137.0
margin_right = 855.0
margin_bottom = 40.0
custom_constants/separation = 60
[connection signal="timeout" from="CanvasLayer/Itens_UI/Timer_popup" to="CanvasLayer/Itens_UI" method="_on_Timer_popup_timeout"]
